<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_artboard_18_border">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/reset_password_heading_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pwd"
            android:fontFamily="@font/ibmplexsans_semibold"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_white_icon"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pwd"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/ibmplexsans_regular"
            android:textColor="@color/another_black"/>
        <EditText
            android:id="@+id/etOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/_5sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pwd"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/ibmplexsans_regular"
            android:textColor="@color/another_black"/>
        <EditText
            android:id="@+id/etNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/_5sdp"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_5sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pwd"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/ibmplexsans_regular"
            android:textColor="@color/another_black"/>
        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/_5sdp"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/tvDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:background="@drawable/tv_signin_bg"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:fontFamily="@font/ibmplexsans_semibold"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>
    </LinearLayout>

</LinearLayout>