<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/login_bg_img">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_arrow_icon"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/_10sdp"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:src="@drawable/login_screen_logo"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/_100sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="-120dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_address"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/ibmplexsans_medium"
                    android:textSize="@dimen/_16sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#828282"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:id="@+id/etMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#828282"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/house_no"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:id="@+id/etHouseNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#828282"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:id="@+id/etStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#828282"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#828282"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pin_code"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:id="@+id/etPinCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#828282"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>

                <Button
                    android:id="@+id/btnCrash"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Force Crash!"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/tvUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_address"
                    android:background="@drawable/tv_signin_bg"
                    android:padding="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_semibold"
                    android:layout_marginTop="@dimen/_16sdp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>