<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/login_bg_img"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:src="@drawable/app_ico"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="-120dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_with"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/ibmplexsans_medium"
                    android:textSize="@dimen/_16sdp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_5sdp">
                    <LinearLayout
                        android:id="@+id/llFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/fb_border"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/fab_icon" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Facebook"
                            android:textColor="#ffffff"
                            android:textSize="@dimen/_10sdp"
                            android:fontFamily="@font/ibmplexsans_medium"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_bg"
                        android:layout_marginLeft="10dp"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@drawable/ic_search" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Google"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/ibmplexsans_medium"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:gravity="center"
                    android:textColor="#828282"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_14sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_regular"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/orange_forgot_password"
                    android:gravity="right"
                    android:fontFamily="@font/ibmplexsans_medium"
                    android:textSize="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:background="@drawable/tv_signin_bg"
                    android:padding="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:fontFamily="@font/ibmplexsans_semibold"
                    android:layout_marginTop="@dimen/_16sdp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_18sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Not a member?"
                        android:textColor="#828282"
                        android:textSize="@dimen/_10sdp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign Up Now"
                        android:layout_marginLeft="5dp"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/orange_forgot_password"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>